--- a/mobile.css
+++ b/mobile.css
@@ -125,14 +125,247 @@
         background-attachment: fixed;
     }
 
+    /*Our Vision*/
+    #Our-Vision h1{
+        text-align: center;
+        padding-bottom: 1rem;
+        color: #fff;
+        font-weight: bolder;
+        font-size: 30px;
+    }
 
+    #Our-Vision p{
+        padding: 0.5rem;
+        line-height: 1.5rem;
+        color: #fff;
+    }
+
+    /*Our Attorneys*/
+
+    #attorneys h1 {
+        text-align: center;
+        padding-top: 3rem;
+        font-size: 30px;
+
+    }
+
+    #attorneys .attorney-grid {
+        padding-top: 2rem;
+        display: grid;
+        grid-template-columns: auto;
+        padding-bottom: 5rem;
+        
+    
+    }
+
+    #attorneys .attorney-grid img
+    {
+        height: 190px;
+        width: 140px;
+        border-radius: .4rem;
+        box-shadow: 0px 2px 10px  #bda5a5;
+        
+    }
+
+    #attorneys .attorney-grid .Profile-1,
+    #attorneys .attorney-grid .Profile-2,
+    #attorneys .attorney-grid .Profile-3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding-top: 2rem;
+    }
+
+    #attorneys .attorney-grid h4{
+        font-weight: 400;
+        padding-top: 1px;
+        
+    }
+
+    .hr{
+ 
+        border: 1px solid var(--txt-secondary);
+        width: 140px;
+    
+        
+    }
+
+    .p-1{
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    #attorneys .attorney-grid p{
+        font-size: 15px;
+     
+       
+    }
+
+    /*Contact Section*/
+
+    #contact-section {
+ 
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    #contact-section .contact-flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 90vh;
+    }
+
+    #contact-section .contact-flex .contact-flex-1{
+        flex-basis: 0;
+        flex-grow: 1;
+        width: 220px;
+        z-index: 10;
+    }
+
+    #contact-section .contact-flex .contact-flex-1 h1{
+        font-size: 30px;
+        padding-left: 1REM;
+        
+    }
+
+    #contact-section .contact-flex .contact-flex-2{
+        flex-basis: 0;
+        flex-grow: 1.5;
+        z-index: 10;
+        width: 350px;
+        padding-top: 2rem;
+    
+    }
+
+    #contact-section .contact-flex .contact-flex-2 h3{
+        display: none;
+    
+    }
+
+    #contact-section .contact-flex .contact-flex-2 p{
+        font-size: 18px;
+        padding: 5px;
+    
+    }
+
+    #contact-section .contact-flex .contact-flex-2 p:nth-child(5){
+        padding-top: 3rem;
+        font-size: 18px;
+        font-weight: 600;
+        width: 350px;
+    }
+
+    #contact-section .contact-flex .contact-flex-2 .flex-form{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding-top: 1rem;
+    }
+
+    label{
+
+        padding-bottom: .2rem;
+        padding-top: 1rem;
+        font-size: 18px;
+    
+    }
+    
+    input{
+
+        height: 30px;
+    }
+
+    textarea{
+        height: 100px;
+        width: 350px;
+    }
+
+    .form-textarea label{
+        padding-top: 1px;
+    }
+
+    .btn{
+        padding-top: 1.5rem;
+    }
+
+    .btn input{
+        width: 100%;
+        height: 35px;
+        font-size: 18px;
+        
+    }
+    #contact-section::after{
+
+        height: 16%;
+        width: 100%;
+        border-bottom-right-radius:120px;
+        border-bottom-left-radius: 100PX;
+
+    
+    }
+
+    /*Back-to-top*/
+
+    .back-top{
+         height: 50px;
+    }
+
+    .back-top .text-container{
+
+        padding-top: 7px;
+        font-size: small;
+    
+    }
+
+    .back-top a:hover{
+        font-size: 14px;
+
+    }
+
+    /*Footer*/
+    #footer{
+        height: 90px;
+        padding: 20px;
+        
+    }
+
+    #footer .footer-flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 60px;
+        
+    }
+
+    #footer .footer-flex .footer-flex-2 i{
+        
+        font-size: 18px;
+        transition-property: font-size;
+        transition-duration: .25s;
+        transition-timing-function: ease-in;
+        padding-bottom: 2rem;
+        padding-top: 1rem;
+    }
+
+    #footer .footer-flex .footer-flex-2 i:hover{
+        font-size: 25px;
+        color: #525252;
+        cursor: pointer;
+        
+    }
+
+    #footer .footer-flex .footer-flex-1 p{
+        font-size: 15px;
+        
+    }
 
 
 
 
 
     
-
 
 
 }
